<!--
@author Leevi Koskinen
@author Janne Lähteenmäki
@author Peetu Salonen
-->
<resources>
    <string name="app_name">PATA</string>
    <string name="OldRecordButton">Vanha Merkintä</string>
    <string name="NewRecordButton">Uusi Merkintä</string>
    <string name="huomenta">Huomenta</string>
    <string name="terve_vaan">Terve vaan</string>
    <string name="ChartButton">Taulukko</string>
    <string name="Record">Merkintä</string>
    <string name="Evening">Ilta</string>
    <string name="Morning">Aamu</string>
    <string name="Extra">Ylimääräinen</string>
    <string name="Normal">Normaali</string>
    <string name="Medicine">Lääke</string>
    <string name="tallennaButton">Tallenna</string>
    <string name="aamuButton">Aamu</string>
    <string name="ylimaarainenButton">Ylimääräinen</string>
    <string name="iltaButton">Ilta</string>
    <string name="textViewDate">Pv</string>
    <string name="textViewMedles">Lääkkeetön</string>
    <string name="textViewMed">Lääkkeellä</string>
    <string name="radioButtonOver">Ylimääräinen</string>
    <string name="radioButtonEve">Ilta</string>
    <string name="radioButtonMorn">Aamu</string>
    <string name="textViewComment">Kommentti</string>
    <string name="editTextThirdNumberNormal">3.</string>
    <string name="editTextFirstNumberNormal">1.</string>
    <string name="editTextSecondNumberNormal">2.</string>
    <string name="editTextFirstNumberMed">1.</string>
    <string name="editTextSecondNumberMed">2.</string>
    <string name="editTextThirdNumberMed">3.</string>
    <string name="PeakAirflow">Huippu Puhallus</string>
    <string name="PlaceHolderText">HelloWorld</string>
    <string name="Dash">-</string>
    <string name="WeekofRecords">Viikon merkinnät:</string>
    <string name="buttonDel">Poista</string>
    <string name="titleChartActivityName">Taulukko</string>
    <string name="titleNewRecordActivityName_ADD">Uusi Merkintä</string>
    <string name="titleNewRecordActivityName_EDIT">Muokkaa Merkintää</string>
    <string name="titleOldRecordActivityName">Vanhat Merkinnät</string>
</resources>